--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="src/css/styles.css" />
   </head>
   <body>
-    <div id="js-clock">
-      <h1></h1>
+    <div class="container">
+      <div id="js-clock">
+        <h1></h1>
+      </div>
+      <form id="greeting-form">
+        <input type="text" placeholder="Write your name" />
+        <h3 id="greeting" class="hiding"></h3>
+      </form>
+      <form id="todo-form">
+        <input type="text" placeholder="오늘의 할일을 작성해주세요!" />
+      </form>
+      <div class="list-container">
+        <ul class="todo-list">
+          <h3>오늘의 할일</h3>
+        </ul>
+        <ul class="finish-list">
+          <h3>오늘 달성한 일!</h3>
+        </ul>
+      </div>
     </div>
-    <form id="greeting-form">
-      <input type="text" placeholder="Write your name" />
-      <h3 id="greeting" class="hiding"></h3>
-    </form>
-    <form id="todo-form">
-      <input type="text" placeholder="오늘의 할일을 작성해주세요!" />
-    </form>
-    <ul class="todo-list">
-      <h3>오늘의 할일</h3>
-    </ul>
-    <ul class="finish-list">
-      <h3>오늘 달성한 일!</h3>
-    </ul>
     <script src="src/js/clock.js"></script>
     <script src="src/js/greeting.js"></script>
     <script src="src/js/todo.js"></script>
