--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
               </td>
             </tr>
             <tr>
-              <th>SUN</th>
+              <th class="sun">SUN</th>
               <th>MON</th>
               <th>TUE</th>
               <th>WED</th>
               <th>TUR</th>
               <th>FRI</th>
-              <th>SAT</th>
+              <th class="sat">SAT</th>
             </tr>
           </thead>
           <tbody id="calendar-body" class="calendar-body"></tbody>
